Fix #BackTheStack text on small screens

--- a/scss/pages/homepage.scss
+++ b/scss/pages/homepage.scss
@@ -72,6 +72,7 @@
             text-align: justify;
             width: 55%;
             margin: 0 auto 1em;
+            display: inline-block;
         }
 
         #braintree-container {
